# ESP32S3_ElectronicCalendar

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
components/WouoUI/: CMakeLists.txt  WouoUI.cpp
components/WouoUI/include/: WouoUI.h
components/dht11/: CMakeLists.txt  dht11.c  dht11.cpp
components/dht11/include/: dht11.h
components/ledDisplay/: CMakeLists.txt  ledDisplay.cpp
components/ledDisplay/include/: ESP32-HUB75-MatrixPanel-I2S-DMA.h  ledDisplay.h  myFont.h
components/temt6000/: CMakeLists.txt  temt6000.c  temt6000.cpp
components/temt6000/include/: temt6000.h
components/utf8_gb2312_switch/: CMakeLists.txt  utf8_gb2312_switch.c
components/utf8_gb2312_switch/include/: gb2312.h  utf8_gb2312_switch.h
components/w25q64/: CMakeLists.txt  w25q64.cpp
components/w25q64/include/: w25q64.h
main/: main.cpp
temp.si4project/: temp.sip_sym  temp.sip_xab  temp.sip_xad  temp.sip_xc  temp.sip_xf  temp.sip_xm  temp.sip_xr  temp.sip_xsb  temp.sip_xsd  temp.siproj  temp.siwork
temp.si4project/cache/parse/: C__Users_86175_Desktop_WouoUI.c.sisc  build_project_elf_src_esp32s3.c.sisc  components_WouoUI_WouoUI.cpp.sisc  components_dht11_dht11.c.sisc  components_ledDisplay_ESP32-HUB75-MatrixPanel-I2S-DMA.cpp.sisc  components_ledDisplay_ESP32-HUB75-MatrixPanel-leddrivers.cpp.sisc  components_ledDisplay_ledDisplay.cpp.sisc  components_utf8_gb2312_switch_utf8_gb2312_switch.c.sisc  components_w25q64_w25q64.cpp.sisc  main_main.cpp.sisc
